--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "admin-dashboard",
+  "name": "mtm-admin-dashboard",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:5000",
+  "proxy":"https://api-mythriftmall.herokuapp.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
